--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.10",
+    "@types/uuid": "^9.0.8",
     "classnames": "^2.5.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-node": "^0.3.9",
